--- a/assets/css/scss/core/_base.scss
+++ b/assets/css/scss/core/_base.scss
@@ -1,5 +1,24 @@
 .container {
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
+  scrollbar-color: $primary #66666620;
+
+  &::-webkit-scrollbar-track {
+    background: #66666620;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $primary;
+    border-radius: 6px;
+  }
+
+  .snap-start {
+    scroll-snap-align: start;
+  }
+
+  .snap-center {
+    scroll-snap-align: center;
+  }
 }
