--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,2 +1,3 @@
-@import './scss/core';
-@import './scss/sections';
+@import "./scss/core";
+@import "./scss/sections";
+@import "./scss/components";
