--- a/assets/css/scss/_sections.scss
+++ b/assets/css/scss/_sections.scss
@@ -1,3 +1,4 @@
-@import './sections/header';
-@import './sections/hero';
-@import './sections/about';
+@import "./sections/header";
+@import "./sections/hero";
+@import "./sections/about";
+@import "./sections/experience";
