--- a/assets/css/scss/sections/_about.scss
+++ b/assets/css/scss/sections/_about.scss
@@ -23,6 +23,8 @@
       position: absolute;
       top: 3rem;
       text-transform: uppercase;
+      font-size: 1.5rem;
+      line-height: 2rem;
       letter-spacing: 1.1rem;
       color: $secondary;
 
