--- a/assets/css/scss/sections/_experience.scss
+++ b/assets/css/scss/sections/_experience.scss
@@ -20,6 +20,8 @@
       position: absolute;
       top: 5rem;
       text-transform: uppercase;
+      font-size: 1.5rem;
+      line-height: 2rem;
       letter-spacing: 1.1rem;
       color: $secondary;
 
