--- a/assets/css/scss/_sections.scss
+++ b/assets/css/scss/_sections.scss
@@ -2,3 +2,5 @@
 @import "./sections/hero";
 @import "./sections/about";
 @import "./sections/experience";
+@import "./sections/skill";
+@import "./sections/contact";
