added width and height

--- a/assets/css/scss/sections/_skill.scss
+++ b/assets/css/scss/sections/_skill.scss
@@ -44,6 +44,8 @@
         display: inline-block;
 
         .skill {
+          width: 90px;
+          height: 90px;
           border-radius: 9999px;
 
           &:hover {
