Added a Btn in About

--- a/assets/css/scss/sections/_contact.scss
+++ b/assets/css/scss/sections/_contact.scss
@@ -134,9 +134,9 @@
             width: 13rem;
             height: 3rem;
             margin-top: 2rem;
-            padding: 0.5rem 28px;
+            padding: 0.5rem 1.75rem;
             border-radius: 6px;
-            font-size: 14px;
+            font-size: 1rem;
             background-color: $secondary;
             color: white;
             cursor: pointer;
