--- a/assets/css/scss/sections/_about.scss
+++ b/assets/css/scss/sections/_about.scss
@@ -98,6 +98,35 @@
           }
         }
       }
+
+      .btn-container {
+        .submit-btn {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          gap: 0.5rem;
+          width: 13rem;
+          height: 3rem;
+          margin-top: 2rem;
+          padding: 0.5rem 1.75rem;
+          border-radius: 6px;
+          font-size: 1rem;
+          background-color: $secondary;
+          color: white;
+          cursor: pointer;
+
+          &:hover {
+              transition: 0.2s;
+              background-color: $primary;
+          }
+
+          .icon {
+           color: white;
+           width: 2rem;
+          }
+        }
+      }
     }
   }
 }
