--- a/assets/css/scss/sections/_hero.scss
+++ b/assets/css/scss/sections/_hero.scss
@@ -12,16 +12,16 @@
     .hero-image {
       position: relative;
       border-radius: 9999px;
-      height: 8rem;
-      width: 8rem; 
+      height: 10rem;
+      width: 10rem; 
       margin-left: auto;
       margin-right: auto;
       object-fit: cover;
     }
 
     .role {
-      font-size: 1rem;
-      line-height: 1.25rem;
+      font-size: 1.5rem;
+      line-height: 1.75rem;
       text-transform: uppercase;
       color: $secondary;
       padding-bottom: 0.5rem;
@@ -30,7 +30,7 @@
 
     .typewriter {
       height: 3.12rem;
-      font-size: 1.5rem;
+      font-size: 2rem;
       line-height: 1;
       font-weight: 600;
       padding: 0 2.5rem;
@@ -48,12 +48,13 @@
       justify-content:center;
       
       .link-button {
-        padding: 0.5rem 1.5rem;
+        padding: 0.75rem 1.75rem;
         width: 140px;
-        border: 1px solid $secondary;
+        border: 3px solid $secondary;
         border-radius: 9999px;
         text-transform: uppercase;
         font-size: 0.75rem;
+        font-weight: 600;
         letter-spacing: 0.1em;
         color: $secondary;
         transition: all 0.2s;
