--- a/assets/css/scss/sections/_hero.scss
+++ b/assets/css/scss/sections/_hero.scss
@@ -17,6 +17,11 @@
       margin-left: auto;
       margin-right: auto;
       object-fit: cover;
+
+      @include xl {
+        height: 15rem;
+        width: 15rem;
+      }
     }
 
     .role {
