--- a/assets/css/scss/_sections.scss
+++ b/assets/css/scss/_sections.scss
@@ -3,5 +3,6 @@
 @import "./sections/about";
 @import "./sections/experience";
 @import "./sections/skill";
+@import "./sections/project";
 @import "./sections/contact";
 @import "./sections/footer";
