--- a/assets/css/scss/component/_project-card.scss
+++ b/assets/css/scss/component/_project-card.scss
@@ -64,24 +64,28 @@
       .description {
         max-width: 75%;
       }
-
-      .submit-btn {
+      .btn-container {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 13rem;
-        height: 3rem;
-        padding: 0.5rem 1.75rem;
-        border-radius: 6px;
-        font-size: 1rem;
-        background-color: $secondary;
-        color: white;
-        cursor: pointer;
+        gap: 1rem;
 
-        &:hover {
-          transition: 0.2s;
-          background-color: $primary;
+        .submit-btn {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          width: 13rem;
+          height: 3rem;
+          padding: 0.5rem 1.75rem;
+          border-radius: 6px;
+          font-size: 1rem;
+          background-color: $secondary;
+          color: white;
+          cursor: pointer;
+
+          &:hover {
+            transition: 0.2s;
+            background-color: $primary;
+          }
         }
       }
     }
