--- a/assets/css/scss/_sections.scss
+++ b/assets/css/scss/_sections.scss
@@ -4,5 +4,6 @@
 @import "./sections/experience";
 @import "./sections/skill";
 @import "./sections/project";
+@import "./sections/reference";
 @import "./sections/contact";
 @import "./sections/footer";
