--- a/assets/css/scss/sections/_about.scss
+++ b/assets/css/scss/sections/_about.scss
@@ -41,6 +41,7 @@
       border-radius: 9999px;
       object-fit: cover;
       margin-top: 5rem;
+      border: 2px solid white;
 
       @include md {
         margin-top: 6rem;
