--- a/assets/css/scss/sections/_contact.scss
+++ b/assets/css/scss/sections/_contact.scss
@@ -1,6 +1,6 @@
 #contact {
   .container {
-    height: 100vh;
+    
     display: flex;
     position: relative;
     flex-direction: column;
@@ -13,6 +13,7 @@
     overflow: hidden;
 
     @include md {
+      height: 100vh;
       flex-direction: row;
       text-align: left;
     }
@@ -28,19 +29,40 @@
 
     .flex-container {
       display: flex;
-      gap: 10rem;
-      margin-top: 5rem;
+      flex-direction: column;
+      gap: 5rem;
+      margin-top: 7rem;
 
-      .contact-heading {
-        width: 525px;
+      @include md {
+        flex-direction: row;
+        gap: 10rem;
+        margin-top: 5rem;
+      }
 
-        h4 {
-          font-size: 2rem;
-          line-height: 2rem;
+      .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-          span {
-            text-decoration: underline;
-            text-decoration-color: $primary;
+        @include md {
+          align-items: flex-start;
+        }
+
+        .contact-heading {
+          width: 15rem;
+
+          @include md {
+            width: 32.8rem;
+          }
+
+          h4 {
+            font-size: 2rem;
+            line-height: 2rem;
+
+            span {
+              text-decoration: underline;
+              text-decoration-color: $primary;
+            }
           }
         }
       }
@@ -73,8 +95,13 @@
       .contact-content {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 1rem;
         margin-top: 2rem;
+
+        @include md {
+          align-items: flex-start;
+        }
 
         .center-content {
           display: flex;
@@ -106,6 +133,7 @@
           margin-top: 0.25rem;
 
           label {
+            text-align: start;
             margin-bottom: 0.25rem;
           }
 
@@ -121,13 +149,17 @@
 
           textarea {
             all: unset;
-            width: 317px;
-            height: 100px;
+            width: 13rem;
+            height: 6.25rem;
             background-color: white;
             color: black;
             padding: 0.5rem;
             border: 3px solid $secondary;
             border-radius: 0.25rem;
+
+            @include md {
+              width: 19.8rem;
+            }
           }
 
           .error {
@@ -143,7 +175,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            width: 13rem;
+            width: 100%;
             height: 3rem;
             margin-top: 2rem;
             padding: 0.5rem 1.75rem;
