--- a/assets/css/scss/sections/_experience.scss
+++ b/assets/css/scss/sections/_experience.scss
@@ -7,26 +7,28 @@
     flex-direction: column;
     text-align: left;
     max-width: 80rem;
-    padding: 0 2.5rem;
+    padding: 0 0.5rem;
     justify-content: space-evenly;
     margin: 0 auto;
     align-items: center;
 
     @include md {
       flex-direction: row;
+      padding: 0 2.5rem;
     }
 
     h3 {
       position: absolute;
-      top: 5rem;
+      top: 3rem;
       text-transform: uppercase;
       font-size: 1.5rem;
       line-height: 2rem;
-      letter-spacing: 1.1rem;
+      letter-spacing: 1rem;
       color: $secondary;
 
       @include md {
         top: 4rem;
+        letter-spacing: 1.1rem;
       }
     }
 
@@ -47,7 +49,11 @@
         position: relative;
         overflow: hidden;
         width: 100%;
-        height: 400px;
+        height: 40rem;
+
+        @include md {
+          height: 25rem;
+        }
 
         .slide {
           position: absolute;
