--- a/assets/css/scss/sections/_project.scss
+++ b/assets/css/scss/sections/_project.scss
@@ -7,14 +7,18 @@
     flex-direction: column;
     text-align: center;
     max-width: 80rem;
-    padding: 0 2.5rem;
+    padding: 0 0.5rem;
     justify-content: space-evenly;
     margin: 0 auto;
     align-items: center;
 
+    @include md {
+      padding: 0 2.5rem;
+    }
+
     h3 {
       position: absolute;
-      top: 5rem;
+      top: 3rem;
       text-transform: uppercase;
       font-size: 1.5rem;
       line-height: 2rem;
@@ -43,7 +47,11 @@
         position: relative;
         overflow: hidden;
         width: 100%;
-        height: 25rem;
+        height: 40rem;
+
+        @include md {
+          height: 25rem;
+        }
 
         .slide {
           position: absolute;
