--- a/assets/css/scss/component/_experience-card.scss
+++ b/assets/css/scss/component/_experience-card.scss
@@ -6,12 +6,13 @@
     width: 15rem;
     padding: 1rem;
     gap: 1rem;
-    margin: 0 0.5rem;
+    margin: 2rem 0.5rem 0;
     border: none;
     border-radius: 5px;
 
     @include md {
       width: 50rem;
+      margin: 0 0.5rem 0;
       border: solid 2px $primary;
     }
 
@@ -74,6 +75,11 @@
           align-items: flex-start;
         }
 
+        p {
+          text-decoration: underline;
+          text-decoration-color: $primary;
+        }
+
         .tags {
           display: flex;
           justify-content: center;
@@ -100,6 +106,8 @@
       ul {
         list-style-type: none;
         margin-top: 1rem;
+        height: 12rem;
+        overflow-y: auto;
 
         li {
           position: relative;
