--- a/assets/css/scss/component/_project-card.scss
+++ b/assets/css/scss/component/_project-card.scss
@@ -6,12 +6,13 @@
     width: 15rem;
     padding: 1rem;
     gap: 1rem;
-    margin: 0 auto;
-    
+    margin: 3rem 0 auto;
+
     border-radius: 5px;
 
     @include md {
       width: 50rem;
+      margin: 0 auto;
       border: solid 2px $primary;
     }
 
@@ -71,7 +72,11 @@
 
       .card-image {
         border-radius: 1rem;
-        
+        width: 12.5rem;
+
+        @include md {
+          width: 18.75rem;
+        }
       }
 
       .description {
@@ -93,13 +98,16 @@
           align-items: center;
           text-align: center;
           width: 13rem;
-          height: 3rem;
           padding: 0.5rem 1.75rem;
           border-radius: 6px;
           font-size: 1rem;
           background-color: $secondary;
           color: white;
           cursor: pointer;
+
+          @include md {
+            height: 3rem;
+          }
 
           &:hover {
             transition: 0.2s;
