--- a/assets/css/scss/sections/_about.scss
+++ b/assets/css/scss/sections/_about.scss
@@ -142,6 +142,7 @@
           @include md {
             position: absolute;
             right: 1.75rem;
+            bottom: 1rem;
             margin-top: 2rem;
           }
 
