--- a/assets/css/scss/sections/_contact.scss
+++ b/assets/css/scss/sections/_contact.scss
@@ -206,6 +206,10 @@
               background-color: $primary;
             }
           }
+
+          .disable {
+            cursor: not-allowed;
+          }
         }
       }
     }
