--- a/assets/css/scss/sections/_contact.scss
+++ b/assets/css/scss/sections/_contact.scss
@@ -162,6 +162,7 @@
             padding: 0.5rem;
             border: 3px solid $secondary;
             border-radius: 0.25rem;
+            text-align: left;
 
             @include md {
               width: 15rem;
@@ -177,6 +178,7 @@
           color: red;
           font-size: 15px;
           min-height: 1.25rem;
+          text-align: left;
         }
 
         .success {
